fix bugs for HBCD presentation small changes to HBCD styles presentation

--- a/src/HBCD/demo/style.css
+++ b/src/HBCD/demo/style.css
@@ -1,9 +1,3 @@
-p, li{
-	font-size: 1.1em;
-}
-section{
-	padding: 30px;
-}
 * {
 	box-sizing: border-box;
 	-webkit-font-smoothing: antialiased;
@@ -113,7 +107,7 @@ h1 {
 	font-family: Raleway Dots;
 
 	/* Fix thin font rendering on Windows */
-	font-size: 72px;
+	font-size: 156px;
 	-webkit-transform: scale(0.5);
 	-moz-transform: scale(0.5);
 	-ms-transform: scale(0.5);
@@ -144,7 +138,7 @@ h2 {
 	position: absolute;
 	left: 0;
 	right: 0;
-	top: 5%;
+	top: 50%;
 	z-index: 30;
 	margin-top: 14px;
 	text-align: center;
@@ -153,7 +147,6 @@ h2 {
 	font-weight: 200;
 	color: white;
 	opacity: 0.9;
-	padding: 0 10px;
 }
 
 header p {
@@ -243,7 +236,6 @@ section {
 	margin-left: -256px;
 	margin-top: -220px;
 	opacity: 0;
-	padding: 85px 30px 30px 30px;
 }
 body,
 section.bespoke-slide {
