--- a/src/Test/styles/main.styl
+++ b/src/Test/styles/main.styl
@@ -30,137 +30,6 @@ bullet_transition_translate_x = 16px
 @page
   size: landscape
   margin: 0
-
-// bespoke.js layout styles
-.header
-  width: 100%
-  height: 30px
-  background-color: black
-.header p
-  color : white
-article
-  transition: background slide_transition_length slide_transition_easing
-  display: none
-  &.bespoke-parent
-    display: block
-    position: fixed
-    top: 0
-    bottom: 0
-    left: 0
-    right: 0
-    overflow: hidden
-    margin-top: 30px
-    @media print
-      overflow: visible
-      position: static
-    perspective: 600px
-
-.bespoke-slide
-  transition:
-    transform slide_transition_length slide_transition_easing,
-    opacity slide_transition_length slide_transition_easing,
-    background slide_transition_length slide_transition_easing
-  transform-origin: 50% 50% 0
-  backface-visibility: hidden
-  display: flex
-  flex-direction: column
-  justify-content: center
-  align-items: center
-  text-align: center
-  width: slide_width
-  height: slide_height
-  position: absolute
-  top: 50%
-  margin-top: (slide_height / 2) * -1
-  left: 50%
-  margin-left: (slide_width / 2) * -1
-  background: slide_background
-  padding: 40px
-  border-radius: 0
-  @media print
-    zoom: 1 !important // disable bespoke-scale
-    height: 743px // seems to correspond with an A4, landscape page height
-    width: 100%
-    page-break-before: always
-    position: static
-    margin: 0
-
-.bespoke-before
-  transform: translateX(slide_transition_nudge_x * -1) translateX(slide_width / -2) rotateY(slide_transition_rotate_y * -1) translateX(slide_width / -2)
-
-.bespoke-after
-  transform: translateX(slide_transition_nudge_x) translateX(slide_width / 2) rotateY(slide_transition_rotate_y) translateX(slide_width / 2)
-  @media print
-    transform: none
-
-.bespoke-inactive
-  opacity: 0
-  pointer-events: none
-  @media print
-    opacity 1
-
-.bespoke-active
-  opacity: 1
-
-// bespoke-bullet styles
-
-.bespoke-bullet
-  transition: all bullet_transition_length bullet_transition_easing
-
-.bespoke-bullet-inactive
-  opacity: 0
-  li&
-    transform: translateX(bullet_transition_translate_x)
-  @media print
-    opacity: 1
-
-.bespoke-bullet-active
-  opacity: 1
-
-// bespoke-scale styles
-
-.bespoke-scale-parent
-  perspective: 600px
-  position: absolute
-  top: 0
-  left: 0
-  right: 0
-  bottom: 0
-  @media print
-    transform: none !important
-
-// bespoke-progress styles
-
-.bespoke-progress-parent
-  position: absolute
-  top: 0
-  left: 0
-  right: 0
-  height: 2px
-  @media only screen and (min-width: 1366px)
-    height: 4px
-  @media print
-    display: none
-
-.bespoke-progress-bar
-  transition: width .6s ease
-  position: absolute
-  height: 100%
-  background: #0089f3
-  border-radius: 0 4px 4px 0
-
-// bespoke-state styles
-
-.emphatic,
-.emphatic .bespoke-slide
-  background: slide_background
-
-// prism styles
-
-pre
-  padding: 26px !important
-  border-radius: 8px
-
 // content styles
 
 body
