--- a/src/Test/styles/style.css
+++ b/src/Test/styles/style.css
@@ -144,7 +144,7 @@ h2 {
 	position: absolute;
 	left: 0;
 	right: 0;
-	top: 70%;
+	top: 5%;
 	z-index: 30;
 	margin-top: 14px;
 	text-align: center;
@@ -153,6 +153,7 @@ h2 {
 	font-weight: 200;
 	color: white;
 	opacity: 0.9;
+	padding: 0 10px;
 }
 
 header p {
@@ -242,6 +243,7 @@ section {
 	margin-left: -256px;
 	margin-top: -220px;
 	opacity: 0;
+	padding: 85px 30px 30px 30px;
 }
 body,
 section.bespoke-slide {
